{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 101,
  "lineage": "dcb632f6-987b-111a-f933-cbec091ef9f3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0dd07d1f1e86b3f6e",
            "public_dns": "ec2-35-174-214-163.compute-1.amazonaws.com",
            "public_ip": "35.174.214.163",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "terraform-elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:390593569829:loadbalancer/terraform-elb",
            "availability_zones": [
              "us-east-1b",
              "us-east-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "terraform-elb-1815635664.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "terraform-elb",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "terraform-elb",
            "security_groups": [
              "sg-0aebf66291ebfd23f"
            ],
            "source_security_group": "390593569829/terraform-elb",
            "source_security_group_id": "sg-0aebf66291ebfd23f",
            "subnets": [
              "subnet-015738f61de2d4876",
              "subnet-0def515dcab3e3a06"
            ],
            "tags": {
              "Name": "terraform-elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "depends_on": [
            "aws_security_group.terraform-elb",
            "aws_subnet.public-1",
            "aws_subnet.public-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-074026f6ce6e5ae32",
            "owner_id": "390593569829",
            "vpc_id": "vpc-09963b36dff46f41d"
          },
          "depends_on": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terraform-nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dd07d1f1e86b3f6e",
            "id": "nat-0d39c1b200dd12040",
            "network_interface_id": "eni-02087a84f330065ef",
            "private_ip": "10.0.1.205",
            "public_ip": "35.174.214.163",
            "subnet_id": "subnet-015738f61de2d4876"
          },
          "depends_on": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.terraform-igw",
            "aws_subnet.public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-085ffd2c27efd7e71",
            "owner_id": "390593569829",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0d39c1b200dd12040",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private"
            },
            "vpc_id": "vpc-09963b36dff46f41d"
          },
          "depends_on": [
            "aws_nat_gateway.terraform-nat",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ff38197439580a6a",
            "owner_id": "390593569829",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-074026f6ce6e5ae32",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public"
            },
            "vpc_id": "vpc-09963b36dff46f41d"
          },
          "depends_on": [
            "aws_internet_gateway.terraform-igw",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04939744f44ead9ce",
            "route_table_id": "rtb-085ffd2c27efd7e71",
            "subnet_id": "subnet-03f194a057637488d"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02eff6d313d71b0fa",
            "route_table_id": "rtb-085ffd2c27efd7e71",
            "subnet_id": "subnet-067707987a747db51"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093b6d9737cc9f1c0",
            "route_table_id": "rtb-0ff38197439580a6a",
            "subnet_id": "subnet-015738f61de2d4876"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066f0d04d313f16c8",
            "route_table_id": "rtb-0ff38197439580a6a",
            "subnet_id": "subnet-0def515dcab3e3a06"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-ec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390593569829:security-group/sg-082dec50e093a8657",
            "description": "ec2 instance security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-082dec50e093a8657",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0aebf66291ebfd23f"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-ec2",
            "name_prefix": null,
            "owner_id": "390593569829",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-09963b36dff46f41d"
          },
          "depends_on": [
            "aws_security_group.terraform-elb",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390593569829:security-group/sg-0aebf66291ebfd23f",
            "description": "ELB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aebf66291ebfd23f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-elb",
            "name_prefix": null,
            "owner_id": "390593569829",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-09963b36dff46f41d"
          },
          "depends_on": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-rds",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390593569829:security-group/sg-0e984ef18fe21c6be",
            "description": "RDS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e984ef18fe21c6be",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-082dec50e093a8657"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-rds",
            "name_prefix": null,
            "owner_id": "390593569829",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-09963b36dff46f41d"
          },
          "depends_on": [
            "aws_security_group.terraform-ec2",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390593569829:subnet/subnet-03f194a057637488d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-03f194a057637488d",
            "map_public_ip_on_launch": false,
            "owner_id": "390593569829",
            "tags": {
              "Name": "Private"
            },
            "vpc_id": "vpc-09963b36dff46f41d"
          },
          "depends_on": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390593569829:subnet/subnet-067707987a747db51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-067707987a747db51",
            "map_public_ip_on_launch": false,
            "owner_id": "390593569829",
            "tags": {
              "Name": "Private"
            },
            "vpc_id": "vpc-09963b36dff46f41d"
          },
          "depends_on": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390593569829:subnet/subnet-015738f61de2d4876",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-015738f61de2d4876",
            "map_public_ip_on_launch": true,
            "owner_id": "390593569829",
            "tags": {
              "Name": "Public"
            },
            "vpc_id": "vpc-09963b36dff46f41d"
          },
          "depends_on": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390593569829:subnet/subnet-0def515dcab3e3a06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0def515dcab3e3a06",
            "map_public_ip_on_launch": true,
            "owner_id": "390593569829",
            "tags": {
              "Name": "Public"
            },
            "vpc_id": "vpc-09963b36dff46f41d"
          },
          "depends_on": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390593569829:vpc/vpc-09963b36dff46f41d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ba6349dd2a16f366",
            "default_route_table_id": "rtb-0ffa34548616f3074",
            "default_security_group_id": "sg-0d3e79a6a40291d26",
            "dhcp_options_id": "dopt-0627d0db77da0a4b7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09963b36dff46f41d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ffa34548616f3074",
            "owner_id": "390593569829",
            "tags": {
              "Name": "Terraform"
            }
          }
        }
      ]
    }
  ]
}